style(menu): fix desktop menu item not align in other language

--- a/src/components/menu/index.css
+++ b/src/components/menu/index.css
@@ -74,6 +74,7 @@
     padding: 0;
     gap: 15px;
     flex: 1;
+    align-items: center;
     min-width: 0;
 }
 
